# multisol

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  integration.yml
multisol/: Cargo.toml
multisol-collector/: Cargo.toml
multisol-collector/src/: lib.rs
multisol-structs/: Cargo.toml
multisol-structs/src/: cli.rs  contract.rs  lib.rs  visit.rs
multisol-writer/: Cargo.toml
multisol-writer/src/: lib.rs
multisol/datasets/01/: B.sol
multisol/datasets/02/: A.sol  B.sol
multisol/datasets/02/c/: C.sol
multisol/datasets/03/: A.sol
multisol/datasets/04/: A.sol  B.sol
multisol/datasets/05/: A.sol  B.sol
multisol/datasets/05/a/: A.sol
multisol/src/: main.rs
multisol/tests/: cli.rs
