[package]
authors = ["Paul Razvan Berg <hello@paulrberg.com>"]
description = "Contract dependency collector for the multisol crate"
edition = "2018"
homepage = "https://github.com/paulrberg/multisol"
keywords = ["ethereum", "etherscan", "solidity", "web3"]
license = "Unlicense"
name = "multisol-collector"
repository = "https://github.com/paulrberg/multisol"
version = "1.1.0"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
regex = "1.4"
multisol-structs = { path = "../multisol-structs", version = "1.1" }
