[package]
    authors = ["Paul Razvan Berg <hello@paulrberg.com>"]
    description = "Write the contracts collected with the multisol crate to a directory"
    edition = "2018"
    homepage = "https://github.com/paulrberg/multisol"
    keywords = ["ethereum", "etherscan", "solidity", "web3"]
    license = "MIT"
    name = "multisol-writer"
    repository = "https://github.com/paulrberg/multisol"
    version = "1.1.0"

[dependencies]
    anyhow = "1.0"
    lazy_static = "1.4"
    regex = "1.4"
    multisol-structs = { path = "../multisol-structs", version = "1.1" }
